--- a/install
+++ b/install
@@ -1,6 +1,12 @@
 sudo cp shutdown-pin.service /etc/systemd/system/shutdown-pin.service
 sudo systemctl enable shutdown-pin.service
 
+sudo cp volume-up-pin.service /etc/systemd/system/volume-up-pin.service
+sudo systemctl enable volume-up-pin.service
+
+sudo cp volume-down-pin.service /etc/systemd/system/volume-down-pin.service
+sudo systemctl enable volume-down-pin.service
+
 sudo apt-get install libgstreamer1.0-0 gstreamer1.0-plugins-base gstreamer1.0-plugins-good gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly gstreamer1.0-libav gstreamer1.0-doc gstreamer1.0-tools gstreamer1.0-x gstreamer1.0-alsa
 
 sudo apt-get install python3-pip
